--- a/css/custom.css
+++ b/css/custom.css
@@ -9,9 +9,9 @@ body {
 
 @font-face {
 	font-family: EuclidFlex, Gilroy, Gilroy-light, monospace;
-	src: url(/public/css/Gilroy.otf);
-	src: url(/public/css/Gilroy-Light.otf);
-	src: url(/public/css/EuclidFlex-Medium.woff2);
+	src: url(css/Gilroy.otf);
+	src: url(css/Gilroy-Light.otf);
+	src: url(css/EuclidFlex-Medium.woff2);
 }
 
 .ele-1 {
