--- a/css/custom.css
+++ b/css/custom.css
@@ -9,12 +9,12 @@ body {
 
 @font-face {
 	font-family: EuclidFlex, Gilroy, Gilroy-light, monospace;
-	src: url(css/Gilroy.otf);
-	src: url(css/Gilroy-Light.otf);
-	src: url(css/EuclidFlex-Medium.eot);
-	src: url(css/EuclidFlex-Medium.ttf);
-	src: url(css/EuclidFlex-Medium.woff);
-	src: url(css/EuclidFlex-Medium.woff2);
+	src: url(css/Gilroy.otf) format('otf');
+	src: url(css/Gilroy-Light.otf)format('otf');
+	src: url(css/EuclidFlex-Medium.eot) format('eot');
+	src: url(css/EuclidFlex-Medium.ttf) format('ttf');
+	src: url(css/EuclidFlex-Medium.woff) format('woff');
+	src: url(css/EuclidFlex-Medium.woff2) format('woff');
 }
 
 .ele-1 {
