--- a/css/custom.css
+++ b/css/custom.css
@@ -29,6 +29,10 @@ body {
 		0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 }
 
+.textsh {
+text-shadow: -1px 1px black;
+}
+
 .moroi {
 	background-color: rgba(255, 255, 255, 0.9);
 }
